--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="library/jcalendar-1.3.2.jar"/>
 	<classpathentry kind="lib" path="library/mssql-jdbc-11.2.0.jre17.jar"/>
+	<classpathentry kind="lib" path="library/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
