--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="library/jcalendar-1.3.2.jar"/>
-	<classpathentry kind="lib" path="library/mssql-jdbc-11.2.0.jre17.jar"/>
 	<classpathentry kind="lib" path="library/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
